sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:5: error: type mismatch;
 found   : Double
 required: Int
    if(plusPetit(i+1,i+2))
                  ^AlgGnomeSort:5: error: type mismatch;
 found   : Double
 required: Int
    if(plusPetit(i+1,i+2))
                      ^AlgGnomeSort:7: error: type mismatch;
 found   : Double
 required: Int
    else if(plusPetit(i+2,i+1)){
                       ^AlgGnomeSort:7: error: type mismatch;
 found   : Double
 required: Int
    else if(plusPetit(i+2,i+1)){
                           ^AlgGnomeSort:8: error: value ==- is not a member of Double
      if(i==-1)
          ^AlgGnomeSort:11: error: type mismatch;
 found   : Double
 required: Int
        echange(i+1,i+2)
                 ^AlgGnomeSort:11: error: type mismatch;
 found   : Double
 required: Int
        echange(i+1,i+2)
                     ^